// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetsClient fetchAssetsObject method Should fetch assets with cache: a1 - assets cached 1`] = `
{
  "collectionInfo": CollectionInfo {
    "collectionName": "Collection 1",
    "traitsOrder": [
      "Background",
    ],
  },
  "traits": [
    Trait {
      "name": "Background",
      "variations": [
        Variation {
          "colors": [
            "Black",
            "Blue",
            "Brown",
            "Green",
          ],
          "name": "Single Color",
        },
        Variation {
          "name": "Custom 1",
        },
      ],
    },
  ],
}
`;

exports[`AssetsClient fetchAssetsObject method Should fetch assets: a1 - assets 1`] = `
{
  "collectionInfo": CollectionInfo {
    "collectionName": "Collection 1",
    "traitsOrder": [
      "Background",
    ],
  },
  "traits": [
    Trait {
      "name": "Background",
      "variations": [
        Variation {
          "colors": [
            "Black",
            "Blue",
            "Brown",
            "Green",
          ],
          "name": "Single Color",
        },
        Variation {
          "name": "Custom 1",
        },
      ],
    },
  ],
}
`;

exports[`AssetsClient fetchCollectionInfo method Should fetch collectionInfo with cache: a1 - collectionInfo cached 1`] = `
CollectionInfo {
  "collectionName": "Collection 1",
  "traitsOrder": [
    "Background",
  ],
}
`;

exports[`AssetsClient fetchCollectionInfo method Should fetch collectionInfo: a1 - collectionInfo 1`] = `
CollectionInfo {
  "collectionName": "Collection 1",
  "traitsOrder": [
    "Background",
  ],
}
`;

exports[`AssetsClient fetchTraits method Should fetch traits with cache: a1 - traits cached 1`] = `
[
  Trait {
    "name": "Background",
    "variations": [
      Variation {
        "colors": [
          "Black",
          "Blue",
          "Brown",
          "Green",
        ],
        "name": "Single Color",
      },
      Variation {
        "name": "Custom 1",
      },
    ],
  },
]
`;

exports[`AssetsClient fetchTraits method Should fetch traits: a1 - traits 1`] = `
[
  Trait {
    "name": "Background",
    "variations": [
      Variation {
        "colors": [
          "Black",
          "Blue",
          "Brown",
          "Green",
        ],
        "name": "Single Color",
      },
      Variation {
        "name": "Custom 1",
      },
    ],
  },
]
`;
